[project]
name = "bug_triage_benchmark"
version = "1.0.0"
description = "Real-world bug triage environment for AI agents"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["envs*"]
