[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bug_triage_benchmark"
version = "1.0.0"
description = "Real-world bug triage environment for AI agents"
requires-python = ">=3.10"

dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pyyaml>=6.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["envs*", "server*"]


